--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d69e38ea-7280-4276-a47d-a966c0f06afc",
      "showTitle": false,
@@ -14,7 +17,11 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.notebook.run(\"./machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb\")"
+    "dbutils.notebook.run(\n",
+    "    \"machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB\",\n",
+    "    #\"hello-world\",\n",
+    "    timeout_seconds=1200 # 20 minutes\n",
+    "    )"
    ]
   }
  ],
