--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "dbutils.notebook.run(\n",
-    "    \"machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB\",\n",
+    "    #\"machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB\",\n",
+    "    \"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
     "    #\"hello-world\",\n",
     "    timeout_seconds=1200 # 20 minutes\n",
     "    )"
