--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -18,10 +18,11 @@
    "outputs": [],
    "source": [
     "dbutils.notebook.run(\n",
-    "    #\"machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB\",\n",
-    "    \"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
-    "    #\"hello-world\",\n",
-    "    timeout_seconds=1200 # 20 minutes\n",
+    "    #\"hello-world\", #runs the notebook from the GitHub repo root\n",
+    "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
+    "    #\"/Workspace/Repos/run-notebook-repo/run-notebook/hello-world\", # runs the notebook from a legacy repo on Databricks\n",
+    "    \"/Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/deploy-from-github-to-model-serving\", # runs the notebook from a legacy repo on Databricks\n",
+    "    timeout_seconds=1800 # 30 minutes\n",
     "    )"
    ]
   }
