--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -52,8 +52,8 @@
    "source": [
     "dbutils.notebook.run(\n",
     "    #\"hello-world\", #runs the notebook from the GitHub repo root\n",
-    "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
-    "    \"/Workspace/Repos/run-notebook-repo/run-notebook/hello-world\", # runs the notebook from a legacy repo on Databricks\n",
+    "    \"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
+    "    #\"/Workspace/Repos/run-notebook-repo/run-notebook/hello-world\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"/Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\",\n",
     "    timeout_seconds=1800 # 30 minutes\n",
