--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -15,44 +15,12 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/html": [
-       "<style scoped>\n",
-       "  .ansiout {\n",
-       "    display: block;\n",
-       "    unicode-bidi: embed;\n",
-       "    white-space: pre-wrap;\n",
-       "    word-wrap: break-word;\n",
-       "    word-break: break-all;\n",
-       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
-       "    font-size: 13px;\n",
-       "    color: #555;\n",
-       "    margin-left: 4px;\n",
-       "    line-height: 19px;\n",
-       "  }\n",
-       "</style>"
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1+output": {
-       "arguments": {},
-       "data": "",
-       "errorSummary": "Cancelled",
-       "errorTraceType": "html",
-       "metadata": {},
-       "type": "ipynbError"
-      }
-     },
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dbutils.notebook.run(\n",
     "    #\"hello-world\", #runs the notebook from the GitHub repo root\n",
-    "    \"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
+    "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
+    "    \"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
     "    #\"/Workspace/Repos/run-notebook-repo/run-notebook/hello-world\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"/Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\",\n",
