--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "dbutils.notebook.run(\n",
-    "    \"hello-world\", #runs the notebook from the GitHub repo root\n",
+    "    \"MyMainNotebook\", #runs the notebook from the GitHub repo root\n",
     "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
     "    #\"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
     "    #\"/Workspace/Repos/run-notebook-repo/run-notebook/hello-world\", # runs the notebook from a legacy repo on Databricks\n",
