--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -18,10 +18,11 @@
    "outputs": [],
    "source": [
     "dbutils.notebook.run(\n",
-    "    \"MyMainNotebook\", #runs the notebook from the GitHub repo root\n",
+    "    #\"MyMainNotebook\", # runs a hello-world notebook from the GitHub repo root\n",
+
+    "    \"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
+
     "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
-    "    #\"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
-    "    #\"/Workspace/Repos/run-notebook-repo/run-notebook/hello-world\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"/Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\",\n",
     "    timeout_seconds=1800 # 30 minutes\n",
