--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -18,9 +18,10 @@
    "outputs": [],
    "source": [
     "dbutils.notebook.run(\n",
-    "    #\"MyMainNotebook\", # runs a hello-world notebook from the GitHub repo root\n",
+    "    #\"MyMainNotebook\", # SUCCESSFULLY runs a hello-world notebook from the GitHub repo root\n",
 
-    "    \"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
+    "    #\"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
+    "    \"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
 
     "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
     "    #\"/Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\", # runs the notebook from a legacy repo on Databricks\n",
