--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -21,7 +21,7 @@
     "    #\"MyMainNotebook\", # SUCCESSFULLY runs a hello-world notebook from the GitHub repo root\n",
 
     "    #\"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
-    "    \"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
+    "    #\"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
     "    \"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb\",\n",
 
     "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
