--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -22,9 +22,9 @@
 
     "    #\"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
     "    #\"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
-    "    \"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb\",\n",
+    "    #\"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb\",\n",
+    "    \"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n" in Databricks
 
-    "    #\"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\", # runs from /Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\n",
     "    #\"/Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\",\n",
     "    timeout_seconds=1800 # 30 minutes\n",
