--- a/find-and-run-notebook.ipynb
+++ b/find-and-run-notebook.ipynb
@@ -23,7 +23,7 @@
     "    #\"/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
     "    #\"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
     "    #\"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb\",\n",
-    "    \"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",
+    "    \"../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world\",\n",
 
     "    #\"/Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\", # runs the notebook from a legacy repo on Databricks\n",
     "    #\"Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving\",\n",
