Update 4.1 - Real-time Deployment with Model Serving - BCB.ipynb
set_experiment

--- a/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb
+++ b/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb
@@ -351,7 +351,7 @@
     "# Point to UC model registry\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     #"mlflow.set_experiment(\"/Users//4.1 - Real-time Deployment with Model Serving - BCB\")\n",
-    "mlflow.set_experiment(\"Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB\")\n",
+    "mlflow.set_experiment(\"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB\")\n",
 
     "client = mlflow.MlflowClient()"
    ]
