--- a/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb
+++ b/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb
@@ -350,7 +350,7 @@
     "\n",
     "# Point to UC model registry\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "mlflow.set_experiment(\"mlflow.set_experiment()\")\n",
+    "mlflow.set_experiment(\"\")\n",
     "client = mlflow.MlflowClient()"
    ]
   },
