Update 4.1 - Real-time Deployment with Model Serving - BCB.ipynb
set_experiment

--- a/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb
+++ b/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb
@@ -350,7 +350,10 @@
     "\n",
     "# Point to UC model registry\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "mlflow.set_experiment(\"/Users//4.1 - Real-time Deployment with Model Serving - BCB\")\n",
+    #"mlflow.set_experiment(\"/Users//4.1 - Real-time Deployment with Model Serving - BCB\")\n",
+    ######ERMISSION_DENIED: Attempted to create an experiment in a protected directory. MLflow experiments should be created under a user directory of the form '/Users//path/to/experiment' or under the 'Shared' directory.
+    ######/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB
+    "mlflow.set_experiment(\"/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/machine-learning-model-deployment-1.0.3/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB\")\n",
     "client = mlflow.MlflowClient()"
    ]
   },
